--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Financial Details - Financial Decision Assistant</title>
     <link rel="icon" type="image/jpeg" href="download.jpeg">
-    <link rel="stylesheet" href="styles.css">
     <style>
         .background-container {
             background-color: #7C93C3;
@@ -107,8 +106,8 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/about-us">About Us</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
     <!-- Financial Details and Change Password Form -->
